crates/weft-snapshots/tests/snapshots/solid-jsx/example-option.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-option as solid-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _list(v) {
  return Array.isArray(v) ? v : [];
}

function _ix(list) {
  return list.map((v, i) => [v, () => i]);
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Sizes">
      <label>
        <span aria-hidden="true">Size</span>
        {(() => {
          const _o = [
            ..._ix(_list(props.data?.sizes)).flatMap(([size, _i0]) => [
              { value: size?.code, el: (
                <option data-weft-id={"size-option[" + _i0() + "]"} selected={_text(size?.code) === _text(props.data?.size)} value={_text(size?.code)}>Size</option>
              ) },
            ]),
            { value: "other", el: (
              <option data-weft-id="size-other" selected={"other" === _text(props.data?.size)} value="other">Other</option>
            ) },
          ];
          return (
            <select data-weft-id="size" aria-label="Size" value={_text(props.data?.size)} onChange={(_e) => { const _c = _o.find((_x) => _text(_x.value) === _e.currentTarget.value); props.onChange?.("$.size", _c ? _c.value : _e.currentTarget.value); }}>
              {_o.map((_x) => _x.el)}
            </select>
          );
        })()}
      </label>
    </main>
  );
}
