crates/weft-snapshots/tests/snapshots/solid-jsx/example-radio-group.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-radio-group as solid-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Plan">
      <div data-weft-id="plan" aria-label="Plan" role="radiogroup">
        <span aria-hidden="true">Plan</span>
        <label>
          <input data-weft-id="plan-free" type="radio" name={"weft-plan"} value="free" aria-label="Free" checked={_text(props.data?.plan) !== "" && "free" === _text(props.data?.plan)} onChange={() => { props.onChange?.("$.plan", "free"); _act(props.actions, { id: "plan", action: "plan.choose" }); }} />
          <span aria-hidden="true">Free</span>
        </label>
        <label>
          <input data-weft-id="plan-pro" type="radio" name={"weft-plan"} value="pro" aria-label="Pro" checked={_text(props.data?.plan) !== "" && "pro" === _text(props.data?.plan)} onChange={() => { props.onChange?.("$.plan", "pro"); _act(props.actions, { id: "plan", action: "plan.choose" }); }} />
          <span aria-hidden="true">Pro</span>
        </label>
      </div>
    </main>
  );
}
