crates/weft-snapshots/tests/snapshots/solid-jsx/example-radio.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-radio as solid-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _on(v) {
  return v === "false" ? false : Boolean(v);
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Delivery">
      <div data-weft-id="speed" aria-label="Delivery speed" role="radiogroup">
        <span aria-hidden="true">Delivery speed</span>
        <label>
          <input data-weft-id="speed-std" type="radio" name={"weft-speed"} value="standard" aria-label="Standard" checked={_text(props.data?.speed) !== "" && "standard" === _text(props.data?.speed)} onChange={() => props.onChange?.("$.speed", "standard")} />
          <span aria-hidden="true">Standard</span>
        </label>
        <label>
          <input data-weft-id="speed-fast" type="radio" name={"weft-speed"} value="express" aria-label="Express" disabled={!_on(props.data?.expressAvailable)} checked={_text(props.data?.speed) !== "" && "express" === _text(props.data?.speed)} onChange={() => props.onChange?.("$.speed", "express")} />
          <span aria-hidden="true">Express</span>
        </label>
      </div>
    </main>
  );
}
