crates/weft-snapshots/tests/snapshots/solid-jsx/example-section.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-section as solid-jsx
---
export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Account">
      <section data-weft-id="profile" aria-label="Profile">
        <div data-weft-slot="header">
          <h2 data-weft-id="profile-title">Profile</h2>
        </div>
        <div data-weft-id="bio">Product designer based in Lisbon.</div>
      </section>
    </main>
  );
}
