crates/weft-snapshots/tests/snapshots/solid-jsx/example-segmented-control.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-segmented-control as solid-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Calendar">
      <div data-weft-id="view" aria-label="View" role="radiogroup" data-weft-segmented="">
        <span aria-hidden="true">View</span>
        <label>
          <input data-weft-id="view-day" type="radio" name={"weft-view"} value="day" aria-label="Day" checked={_text(props.data?.view) !== "" && "day" === _text(props.data?.view)} onChange={() => { props.onChange?.("$.view", "day"); _act(props.actions, { id: "view", action: "calendar.update" }); }} />
          <span aria-hidden="true">Day</span>
        </label>
        <label>
          <input data-weft-id="view-week" type="radio" name={"weft-view"} value="week" aria-label="Week" checked={_text(props.data?.view) !== "" && "week" === _text(props.data?.view)} onChange={() => { props.onChange?.("$.view", "week"); _act(props.actions, { id: "view", action: "calendar.update" }); }} />
          <span aria-hidden="true">Week</span>
        </label>
        <label>
          <input data-weft-id="view-month" type="radio" name={"weft-view"} value="month" aria-label="Month" checked={_text(props.data?.view) !== "" && "month" === _text(props.data?.view)} onChange={() => { props.onChange?.("$.view", "month"); _act(props.actions, { id: "view", action: "calendar.update" }); }} />
          <span aria-hidden="true">Month</span>
        </label>
      </div>
    </main>
  );
}
