crates/weft-snapshots/tests/snapshots/solid-jsx/example-select.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-select as solid-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Locale">
      <label>
        <span aria-hidden="true">Country</span>
        {(() => {
          const _o = [
            { value: "pt", el: (
              <option data-weft-id="c-pt" selected={"pt" === _text(props.data?.country)} value="pt">Portugal</option>
            ) },
            { value: "es", el: (
              <option data-weft-id="c-es" selected={"es" === _text(props.data?.country)} value="es">Spain</option>
            ) },
          ];
          return (
            <select data-weft-id="country" aria-label="Country" value={_text(props.data?.country)} onChange={(_e) => { const _c = _o.find((_x) => _text(_x.value) === _e.currentTarget.value); props.onChange?.("$.country", _c ? _c.value : _e.currentTarget.value); _act(props.actions, { id: "country", action: "profile.update" }); }}>
              {_o.map((_x) => _x.el)}
            </select>
          );
        })()}
      </label>
    </main>
  );
}
